// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render Table with props data as an array 1`] = `
<table
  className="table tc-object-viewer table table-bordered table-striped table-hover"
>
  <thead>
    <tr>
      <td>
        field0
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <JSONLike
          data="header1"
          jsonpath="$[0]['field0']"
        />
      </td>
    </tr>
    <tr>
      <td>
        <JSONLike
          data={undefined}
          jsonpath="$[1]['field0']"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should render Table with props data as an object 1`] = `
<table
  className="table tc-object-viewer table table-bordered table-striped table-hover"
>
  <thead>
    <tr>
      <td>
        <div>
          field0
        </div>
        <div
          className="text-right"
        >
          type1
        </div>
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <JSONLike
          data="header1"
          jsonpath="$[0]['field0']"
        />
      </td>
    </tr>
    <tr>
      <td>
        <JSONLike
          data={undefined}
          jsonpath="$[1]['field0']"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should render if data is empty 1`] = `
<table
  className="table tc-object-viewer table table-bordered table-striped table-hover"
>
  <thead>
    <tr>
      <td>
        $
      </td>
    </tr>
  </thead>
  <tbody>
    
  </tbody>
</table>
`;

exports[`Table should render null if data.datas is not an array 1`] = `null`;

exports[`buildContentHeaders should return a jsx array with a type 1`] = `
Array [
  <td>
    <div>
        myHeader1
    </div>
    <div
        className="text-right"
    >
        type1
    </div>
</td>,
  <td>
    <div>
        myHeader2
    </div>
    <div
        className="text-right"
    >
        type2
    </div>
</td>,
]
`;

exports[`buildContentHeaders should return a jsx array with no type 1`] = `
Array [
  <td>
    myHeader1
</td>,
  <td>
    myHeader2
</td>,
]
`;
